--- a/wiphoto/CSS/iphoto.css
+++ b/wiphoto/CSS/iphoto.css
@@ -27,12 +27,28 @@ a {
     padding-top: 2ex;
     text-shadow: 1px 2px #eee;
 }
+
+.menuItem {
+/*    min-height: 20px; */
+    position: relative;
+    line-height: 15px;
+}
+.menu_icon {
+    height: 15px;
+    padding: 0;
+    margin: 0;
+    margin-right: 5px;
+}
+
 #navigation a {
  display: block;
- min-height: 12pt;
+/* min-height: 12pt; */
  text-decoration: none;
  font-size: 8pt;
  text-indent: 1.5em;
+ margin: 0px;
+ padding: 0;
+ padding-bottom: 2px;
 }
 
 #navigation .selected {
